Crash with mask expand operator while in rendered or material view #69723

Closed
opened 2019-09-10 17:16:40 +02:00 by Lucas · 5 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 770/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 399.24

Blender Version
Broken: version: 2.81 (sub 10), branch: master, commit date: 2019-09-10 13:53, hash: e0f7ada0d2
Worked: (optional)

Short description of error
Crash with mask expand operator while in rendered or material view

Exact steps for others to reproduce the error
1.Go into sculpt mode with any mesh and switch to render view or material view
2.Press shift+a to execute mask expand operator
3.Left click to confirm
Blender crashes. Shift alt A operator works fine (curvature mode)

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 770/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 399.24 **Blender Version** Broken: version: 2.81 (sub 10), branch: master, commit date: 2019-09-10 13:53, hash: `e0f7ada0d2` Worked: (optional) **Short description of error** Crash with mask expand operator while in rendered or material view **Exact steps for others to reproduce the error** 1.Go into sculpt mode with any mesh and switch to render view or material view 2.Press shift+a to execute mask expand operator 3.Left click to confirm Blender crashes. Shift alt A operator works fine (curvature mode)
Author

Added subscriber: @Xorrito

Added subscriber: @Xorrito

This issue was referenced by 841df2b98e

This issue was referenced by 841df2b98e785649a6346d3c6e560a168186eef3
Member

Added subscriber: @PabloDobarro

Added subscriber: @PabloDobarro
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Pablo Dobarro self-assigned this 2019-09-10 17:45:42 +02:00
Member

Fixed in 841df2b98e. Thanks!

Fixed in 841df2b98e. Thanks!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69723
No description provided.