Fix T69723: Crash with mask expand operator while in rendered or material view

Reviewed By: brecht

Differential Revision: https://developer.blender.org/D5745